# nml2lst

./: .depend  ChangeLog  Makefile  Makefile.in  configure  configure.in  example.nml  nml2txt.c
