dnl $Id$
dnl First working copy of an autoconf file!!
dnl Process this file with autoconf to produce a configure script.
AC_INIT(nml2txt.c)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(expat, XML_ParserCreate, , [AC_MSG_ERROR([You have no working libexpat. Aborting!])])

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile)
